--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>H5TreeCompare</title>
   <base href="/kendo-clarity-tree/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+<link rel="stylesheet" href="styles.87733572453d722bc39f.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="scripts.js" defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.591b5ee033474730d8f5.js" nomodule defer></script><script src="polyfills-es2015.2320f4dbebd0efa7fb56.js" type="module"></script><script src="scripts.13a7b23fdcda4f90c731.js" defer></script><script src="main-es2015.c8c5ac816159b13018d9.js" type="module"></script><script src="main-es5.c8c5ac816159b13018d9.js" nomodule defer></script></body>
 </html>
